# agent_demo

./: .env  .gitignore  .gitingore  README.md  fastapi_server.py  main.py  pydantic_ui.py  pyproject.toml  teacher_agent.py
agent/: search_agent.py  simple_agent.py  wikipedia_agent.py
examples/: bank_agent.py
travel_agent/: README.md  agent.py  base_agent.py  extraction_agent.py  main.py  pyproject.toml
tutor-agent/: README.md  tutor_agent.py
