[project]
name = "agent-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-community>=0.4.1",
    "ollama>=0.6.1",
    "pydantic-ai>=1.86.0",
    "pydantic-ai-slim[duckduckgo,web,web-fetch]>=1.86.0",
    "wikipedia>=1.4.0",
]
