[project]
name = "agent-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "langchain-community>=0.4.1",
    "ollama>=0.6.1",
    "pydantic-ai>=1.86.0",
    "pydantic-ai-slim[duckduckgo,web,web-fetch]>=1.86.0",
    "requests>=2.33.1",
    "streamlit>=1.57.0",
    "uvicorn[standard]>=0.46.0",
    "wikipedia>=1.4.0",
]

[tool.uv.workspace]
members = [
    "travel_agent/travel_agent",
    "travel_agent",
]
