[project]
name = "travel-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.0",
    "ollama>=0.6.1",
    "python-dotenv>=1.2.2",
]
