[project]
name = "travel-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "langchain-community>=0.4.1",
    "ollama>=0.6.1",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.0",
    "ollama>=0.6.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]
